--- a/argocd/ingress.yaml
+++ b/argocd/ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   name: argocd
   namespace: argocd
   annotations:
-    #nginx.ingress.kubernetes.io/rewrite-target: /
-    #kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   ingressClassName: nginx
